log
Mon 10 Apr 2023 02:17:15 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:51: error: expected ‘)’ before ‘;’ token
   57 |     new_map->buckets = (Pair*) malloc(sizeof(Pair);
      |                                      ~            ^
      |                                                   )
hashmap.c:57:22: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   57 |     new_map->buckets = (Pair*) malloc(sizeof(Pair);
      |                      ^
hashmap.c:62:20: error: expected ‘;’ before ‘}’ token
   62 |     return new_map;
      |                    ^
      |                    ;
   63 | }
      | ~                   
hashmap.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
aab7e9a
Mon 10 Apr 2023 02:17:42 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:22: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   57 |     new_map->buckets = (Pair*) malloc(sizeof(Pair));
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
468ff8c
Mon 10 Apr 2023 02:17:51 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:22: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   57 |     new_map->buckets = (Pair*) malloc(sizeof(Pair*));
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
fbe64ef
Mon 10 Apr 2023 02:18:01 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:22: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   57 |     new_map->buckets = (Pair*) malloc(sizeof(Pair));
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
98bf12f
Mon 10 Apr 2023 02:18:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
5932b2d
Mon 10 Apr 2023 02:18:26 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
898a7e4
Mon 10 Apr 2023 02:21:26 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
ccc8398
Mon 10 Apr 2023 02:21:39 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
afac450
Mon 10 Apr 2023 02:22:40 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
dbe052a
Wed 12 Apr 2023 02:12:43 PM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  0|0
1b440d0
Wed 12 Apr 2023 02:17:37 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
0d9420a
Wed 12 Apr 2023 02:20:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
eb8f62d
Wed 12 Apr 2023 02:44:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ac053ef
Wed 12 Apr 2023 02:44:45 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 20/70
9ce22e2
Wed 12 Apr 2023 02:50:31 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
c64b425
Wed 12 Apr 2023 03:06:21 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  2|5
total_score: 10/70
1d3adf0
Sun 16 Apr 2023 05:26:17 AM UTC: 
 hashmap.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
 tests:  4|5
total_score: 20/70
ca848d1
Sun 16 Apr 2023 05:32:38 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 30/70
a3d5ba6
